Added an images folder to repo and addded images to about page.

--- a/about.html
+++ b/about.html
@@ -15,5 +15,17 @@
     </nav>
     <h1>Michael Martin</h1>
     <h3>About</h3>
+    <ul>
+        <li>
+            I used to be a touring punk rock bass player.
+            <br>
+        <img src="images/bass.jpg" alt="Michael Playing Bass">
+        </li>
+        <li>
+            I am a hobby mechanic.
+            <br>
+            <img src="images/cars.jpg" alt="Beautiful Miatas and Motorcycle">
+        </li>
+    </ul>    
 </body>
 </html>
