--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael's Website</title>
+    <title>Michael's Website About</title>
     <script src="javascript.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
