--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
         <a href="portfolio.html">Portfolio</a>
     </nav>
     <h1>Michael Martin</h1>
-    <h3>Home</h3>
+    <h2>Web developer</h2>
+    <img class="home" src="images/homeprofile.jpg" alt="Michael in front of two motorcycles attached together">
+    <p>
+        This website is all about me. 
+        There is a home page (where you are currently), an about page, and a portolio page.
+    </p>
+    <p>
+        I am currently studying at FullStack Academy to become a web developer.
+        I plan on using this page as a practice page to apply the new skills I learn and to show off to possible employers.
+    </p>
 </body>
 </html>
