Applied CSS properties to Nav Bar and a new image and info to about page.

--- a/about.html
+++ b/about.html
@@ -22,9 +22,14 @@
         <img src="images/bass.jpg" alt="Michael Playing Bass">
         </li>
         <li>
-            I am a hobby mechanic.
+            I am a hobby mechanic who specializes in first and second generation Miatas for extra money.
             <br>
-            <img src="images/cars.jpg" alt="Beautiful Miatas and Motorcycle">
+            <img class="cars" src="images/cars.jpg" alt="Beautiful Miatas and Motorcycle">
+        </li>
+        <li>
+            I was a sales manager at a craft brewery before quiting to pursue web development.
+            <br>
+            <img src="images/beer.jpeg" alt="Michael Holding Tin Roof Beer">
         </li>
     </ul>    
 </body>
