--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,33 @@
     </nav>
     <h1>Michael Martin</h1>
     <h3>Portfolio</h3>
-    
+    <ol>
+        <li>
+            First Project
+            <ul>
+                <li>placeholder</li>
+                <li>placeholder</li>
+                <li>placeholder</li>
+            </ul>
+        </li>
+        <br>
+        <li>
+            Second Project
+            <ul>
+                <li>placeholder</li>
+                <li>placeholder</li>
+                <li>placeholder</li>
+            </ul>
+        </li>
+        <br>
+        <li>
+            Third Project
+            <ul>
+                <li>placeholder</li>
+                <li>placeholder</li>
+                <li>placeholder</li>
+            </ul>
+        </li>
+    </ol>
 </body>
 </html>
