Made current page have its part of the nav bar highlighted by background, changed posisitioning on text and images

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a class="currentPage" href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
     </nav>
     <h1>Michael Martin</h1>
@@ -19,18 +19,24 @@
         <li>
             I used to be a touring punk rock bass player.
             <br>
+            <br>
         <img src="images/bass.jpg" alt="Michael Playing Bass">
         </li>
+        <br>
         <li>
             I am a hobby mechanic who specializes in first and second generation Miatas for extra money.
             <br>
+            <br>
             <img class="cars" src="images/cars.jpg" alt="Beautiful Miatas and Motorcycle">
         </li>
+        <br>
         <li>
             I was a sales manager at a craft brewery before quiting to pursue web development.
             <br>
+            <br>
             <img src="images/beer.jpeg" alt="Michael Holding Tin Roof Beer">
         </li>
+        <br>
     </ul>    
 </body>
 </html>
