--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
+        <a class="currentPage" href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
     </nav>
     <h1>Michael Martin</h1>
-    <h3>Web developer</h3>
+    <h3>Web Developer</h3>
     <img class="home" src="images/homeprofile.jpg" alt="Michael in front of two motorcycles attached together">
+    <br>
     <p>
         This website is all about me. 
         There is a home page (where you are currently), an about page, and a portolio page.
