--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
+        <a class="currentPage" href="portfolio.html">Portfolio</a>
     </nav>
     <h1>Michael Martin</h1>
     <h3>Portfolio</h3>
@@ -19,27 +19,33 @@
         <li>
             First Project
             <ul>
+                <br>
                 <li>placeholder</li>
                 <li>placeholder</li>
                 <li>placeholder</li>
+                <br>
             </ul>
         </li>
         <br>
         <li>
             Second Project
             <ul>
+                <br>
                 <li>placeholder</li>
                 <li>placeholder</li>
                 <li>placeholder</li>
+                <br>
             </ul>
         </li>
         <br>
         <li>
             Third Project
             <ul>
+                <br>
                 <li>placeholder</li>
                 <li>placeholder</li>
                 <li>placeholder</li>
+                <br>
             </ul>
         </li>
     </ol>
