added more images to about page

--- a/about.html
+++ b/about.html
@@ -21,12 +21,14 @@
             <br>
             <br>
         <img src="images/bass.jpg" alt="Michael Playing Bass">
+        <img src="images/bass2.jpg" alt="Michael Still Playing Bass">
         </li>
         <br>
         <li>
-            I am a hobby mechanic who specializes in first and second generation Miatas for extra money.
+            I am a hobby mechanic who specializes in first and second generation Miatas.
             <br>
             <br>
+            <img class= "cars" src="images/engine.jpg" alt="1.8L Miata Engine">
             <img class="cars" src="images/cars.jpg" alt="Beautiful Miatas and Motorcycle">
         </li>
         <br>
@@ -35,6 +37,7 @@
             <br>
             <br>
             <img src="images/beer.jpeg" alt="Michael Holding Tin Roof Beer">
+            <img src="images/floralfriday.jpg" alt="Michael Holding Floral Beer">
         </li>
         <br>
     </ul>    
