Updating README and Home Page.

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
         I am currently studying at FullStack Academy to become a web developer.
         I plan on using this page as a practice page to apply the new skills I learn and to show off to possible employers.
     </p>
+    <p>I am begining to notice that there are no professional photos of me not holding a beer.</p>
 </body>
 </html>
