Tried to make placeholders slightly less placeholdery.

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,9 @@
             First Project
             <ul>
                 <br>
-                <li>placeholder</li>
-                <li>placeholder</li>
-                <li>placeholder</li>
+                <li>This website you are on is my first project.</li>
+                <li>That's a little to meta huh?</li>
+                <li>The rest of this page is going to be placeholders for now.</li>
                 <br>
             </ul>
         </li>
