added a footer that matches the nav bar, played around with the colors of both

--- a/index.html
+++ b/index.html
@@ -26,5 +26,10 @@
         I plan on using this page as a practice page to apply the new skills I learn and to show off to possible employers.
     </p>
     <p>I am begining to notice that there are no professional photos of me not holding a beer.</p>
+    <footer>
+        <a class="currentPage" href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+    </footer>   
 </body>
 </html>
