--- a/portfolio.html
+++ b/portfolio.html
@@ -18,10 +18,10 @@
     <ol>
         <li>
             First Project
-            <ul>
+            <ul class="portfolio">
                 <br>
                 <li>This website you are on is my first project.</li>
-                <li>That's a little to meta huh?</li>
+                <li>That's a little too meta huh?</li>
                 <li>The rest of this page is going to be placeholders for now.</li>
                 <br>
             </ul>
@@ -29,7 +29,7 @@
         <br>
         <li>
             Second Project
-            <ul>
+            <ul class="portfolio">
                 <br>
                 <li>placeholder</li>
                 <li>placeholder</li>
@@ -40,7 +40,7 @@
         <br>
         <li>
             Third Project
-            <ul>
+            <ul class="portfolio">
                 <br>
                 <li>placeholder</li>
                 <li>placeholder</li>
@@ -49,5 +49,10 @@
             </ul>
         </li>
     </ol>
+    <footer>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a class="currentPage" href="portfolio.html">Portfolio</a>
+    </footer>   
 </body>
 </html>
