--- a/about.html
+++ b/about.html
@@ -14,7 +14,6 @@
         <a href="portfolio.html">Portfolio</a>
     </nav>
     <h1>Michael Martin</h1>
-    <h3>About</h3>
     <ul>
         <li>
             I used to be a touring punk rock bass player.
@@ -40,6 +39,11 @@
             <img src="images/floralfriday.jpg" alt="Michael Holding Floral Beer">
         </li>
         <br>
-    </ul>    
+    </ul>
+    <footer>
+        <a href="index.html">Home</a>
+        <a class="currentPage" href="about.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+    </footer>    
 </body>
 </html>
