Added my face to the nav bar and footer

--- a/about.html
+++ b/about.html
@@ -10,7 +10,9 @@
 <body>
     <nav>
         <a href="index.html">Home</a>
+        <img class="face" src="images/faceleft.png" alt="Michael's Face">
         <a class="currentPage" href="about.html">About</a>
+        <img class="face" src="images/faceright.png" alt="Michael's Face">
         <a href="portfolio.html">Portfolio</a>
     </nav>
     <h1>Michael Martin</h1>
@@ -42,7 +44,9 @@
     </ul>
     <footer>
         <a href="index.html">Home</a>
+        <img class="face" src="images/faceleft.png" alt="Michael's Face">
         <a class="currentPage" href="about.html">About</a>
+        <img class="face" src="images/faceright.png" alt="Michael's Face">
         <a href="portfolio.html">Portfolio</a>
     </footer>    
 </body>
