--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <nav>
         <a class="currentPage" href="index.html">Home</a>
+        <img class="face" src="images/faceleft.png" alt="Michael's Face">
         <a href="about.html">About</a>
+        <img class="face" src="images/faceright.png" alt="Michael's Face">
         <a href="portfolio.html">Portfolio</a>
     </nav>
     <h1>Michael Martin</h1>
@@ -28,7 +30,9 @@
     <p>I am begining to notice that there are no professional photos of me not holding a beer.</p>
     <footer>
         <a class="currentPage" href="index.html">Home</a>
+        <img class="face" src="images/faceleft.png" alt="Michael's Face">
         <a href="about.html">About</a>
+        <img class="face" src="images/faceright.png" alt="Michael's Face">
         <a href="portfolio.html">Portfolio</a>
     </footer>   
 </body>
