--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,9 @@
 <body>
     <nav>
         <a href="index.html">Home</a>
+        <img class="face" src="images/faceleft.png" alt="Michael's Face">
         <a href="about.html">About</a>
+        <img class="face" src="images/faceright.png" alt="Michael's Face">
         <a class="currentPage" href="portfolio.html">Portfolio</a>
     </nav>
     <h1>Michael Martin</h1>
@@ -48,10 +50,25 @@
                 <br>
             </ul>
         </li>
+        <br>
+        <li>
+            Fourth Project
+            <ul class="portfolio">
+                <br>
+                <li>I only added this one</li>
+                <li>so that the footer</li>
+                <li>would go all the way down</li>
+                <li>without messing with</li>
+                <li>flexbox.</li>
+                <br>
+            </ul>
+        </li>
     </ol>
     <footer>
         <a href="index.html">Home</a>
+        <img class="face" src="images/faceleft.png" alt="Michael's Face">
         <a href="about.html">About</a>
+        <img class="face" src="images/faceright.png" alt="Michael's Face">
         <a class="currentPage" href="portfolio.html">Portfolio</a>
     </footer>   
 </body>
