Added flex properties to center images

--- a/about.html
+++ b/about.html
@@ -16,32 +16,28 @@
         <a href="portfolio.html">Portfolio</a>
     </nav>
     <h1>Michael Martin</h1>
-    <ul>
-        <li>
-            I used to be a touring punk rock bass player.
-            <br>
-            <br>
-        <img src="images/bass.jpg" alt="Michael Playing Bass">
-        <img src="images/bass2.jpg" alt="Michael Still Playing Bass">
-        </li>
-        <br>
-        <li>
-            I am a hobby mechanic who specializes in first and second generation Miatas.
-            <br>
-            <br>
+    <br>
+    <br>
+    <div class="container">
+        <h3>I used to be a touring punk rock bass player.</h3>
+        <div class="aboutImg">
+            <img src="images/bass.jpg" alt="Michael Playing Bass">
+            <img src="images/bass2.jpg" alt="Michael Still Playing Bass">
+        </div>
+
+        <h3>I am a hobby mechanic who specializes in first and second generation Miatas.</h3>
+        <div class="aboutImg">
             <img class= "cars" src="images/engine.jpg" alt="1.8L Miata Engine">
             <img class="cars" src="images/cars.jpg" alt="Beautiful Miatas and Motorcycle">
-        </li>
-        <br>
-        <li>
-            I was a sales manager at a craft brewery before quiting to pursue web development.
-            <br>
-            <br>
+        </div>
+
+        <h3>I was a sales manager at a craft brewery before quiting to pursue web development.</h3>
+        <div class="aboutImg">
             <img src="images/beer.jpeg" alt="Michael Holding Tin Roof Beer">
             <img src="images/floralfriday.jpg" alt="Michael Holding Floral Beer">
-        </li>
-        <br>
-    </ul>
+        </div>
+    </div>
+        
     <footer>
         <a href="index.html">Home</a>
         <img class="face" src="images/faceleft.png" alt="Michael's Face">
